--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    font-family: monospace;
 }
 
 .tabs {
@@ -52,6 +53,7 @@ body {
     background-color: #111111;
     color: #DDDDDD;
     border: none;
+    resize: none;
 }
 
 .svg-editor-result {
