--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ body {
     height: 100%;
 }
 
-.svg-editor-input {
+.svg-editor textarea {
     flex-grow: 1;
     padding: 5px;
     margin: 5px;
@@ -56,7 +56,7 @@ body {
     resize: none;
 }
 
-.svg-editor-result {
+.svg-editor svg {
     flex-grow: 2;
     padding: 5px;
     margin: 5px;
