--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,40 @@ body {
     font-family: monospace;
 }
 
+.dialog-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.dialog {
+    padding: 10px 10px 3px 10px;
+    border-radius: 3px;
+    background-color: #333333;
+}
+
+.dialog-controls {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.dialog-hidden {
+    display: none;
+}
+
+input {
+    font-family: monospace;
+    padding: 3px;
+    border: 0;
+    background-color: #EEEEEE;
+}
+
 .button {
     flex-grow: 0;
     flex-shrink: 0;
